PL/Projecto/tests/good/3.nx
let x : int = 10 % (6 / 2) in print(x - 1);
