PL/Projecto/tests/bad/8.nx
let x : int = true in print(x);
